--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div id="header-hero-container">
         <header>
             <div class="flex container">
-                <a id="logo" href="#">STATED.</a>
+                <a id="logo" href="#">Front Row.</a>
                 <nav>
                     <button id="nav-toggle" class="hamburger-menu">
                         <span class="strip"></span>
@@ -28,11 +28,10 @@
 
                     <ul id="nav-menu">
                         <li><a href="#" class="active">Home</a></li>
-                        <li><a href="http://www.google.com" target="_blank">Properties</a></li>
-                        <li><a href="#">Agents</a></li>
-                        <li><a href="#">About</a></li>
-                        <li><a href="#">News</a></li>
-                        <li><a href="#">Contact</a></li>
+                        <li><a href="#" target="_blank">Properties</a></li>
+                        <li><a href="#">Tutors</a></li>
+                        <li><a href="#">Mission</a></li>
+                        <li><a href="#">Schedule</a></li>
                         <li id="close-flyout"><span class="fas fa-times"></span></li>
                     </ul>
                 </nav>
@@ -42,19 +41,19 @@
         <section id="hero">
             <div class="fade"></div>
             <div class="hero-text">
-                <h1>Buy and sell real estate properties</h1>
-                <p>Lorem ipsum dolor sit amet consectectur adipisicing elit. Laboriosam assumenda ea quo cupiditate facere deleniti fuga officia.</p>
+                <h1>Tutoring from the Front Row</h1>
+                <p>Tutors with experience, people who can communicate.</p>
             </div>
         </section>
     </div>
 
     <section id="how-it-works">
         <div class="container">
-            <h2>How It Works</h2>
+            <h2>Subjects</h2>
             <div class="flex">
                 <div>
                     <span class="fas fa-home"></span>
-                    <h4>Find a Property.</h4>
+                    <h4></h4>
                     <p>Lorem ipsum dolor sit amet consectectur adipisicing elit.</p>
                 </div>
 
