--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <div class="fade"></div>
             <div class="hero-text">
                 <h1>Tutoring from the Front Row</h1>
-                <p>Tutors with experience, people who can communicate.</p>
+                <p>Tutors with experience, patience, and a mission.</p>
             </div>
         </section>
     </div>
@@ -52,21 +52,21 @@
             <h2>Subjects</h2>
             <div class="flex">
                 <div>
-                    <span class="fas fa-home"></span>
-                    <h4></h4>
-                    <p>Lorem ipsum dolor sit amet consectectur adipisicing elit.</p>
+                    <span class="fas fa-chalkboard-teacher"></span>
+                    <h4>Select a tutor</h4>
+                    <p>Find a tutor with the right subjects from our group of hand-picked, friendly tutors.</p>
                 </div>
 
                 <div>
-                    <span class="fas fa-dollar-sign"></span>
-                    <h4>Buy a Property.</h4>
-                    <p>Lorem ipsum dolor sit amet consectectur adipisicing elit.</p>
+                    <span class="fas fa-calendar-plus"></span>
+                    <h4>View their schedule, and book interactively.</h4>
+                    <p>Check when our tutors are available, and book when you want.</p>
                 </div>
 
                 <div>
-                    <span class="fas fa-chart-line"></span>
-                    <h4>Investing.</h4>
-                    <p>Lorem ipsum dolor sit amet consectectur adipisicing elit.</p>
+                    <span class="fas fa-brain"></span>
+                    <h4>Learn.</h4>
+                    <p>See your grades improve with a friendly and tight knit group of tutors helping each other to help you.</p>
                 </div>
             </div>
         </div>
