--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <section id="hero">
             <div class="fade"></div>
             <div class="hero-text">
-                <h1>Tutoring from the Front Row</h1>
+                <h1>Tutoring from the Front Row.</h1>
                 <p>Tutors with experience, patience, and a mission.</p>
             </div>
         </section>
@@ -271,7 +271,11 @@
         <div class="flex container">
             <div class="footer-about">
                 <h5>About Front Row.</h5>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque facere laudantium magnam voluptatum autem. Amet aliquid nesciunt veritatis aliquam.</p>
+                <p>
+                Front Row Tutors is a group of college students and graduates looking to help lift up students to 
+                reach their goals. The group was founded by 4 students with years of experience in tutoring, and excellent personal academic
+                track records.
+                </p>
             </div>
 
             <div class="footer-quick-links">
@@ -302,7 +306,7 @@
         </div>
 
         <small>
-            Copyright &copy; 2019 All rights reserved | This template is made with <span class="fa fa-heart"></span> by <a href="https://colorlib.com">Colorlib</a>
+            Copyright &copy; 2020 All rights reserved | This website was made with the help of <span class="fa fa-heart"></span> by <a href="https://colorlib.com">Colorlib</a>
         </small>
     </footer>
 
