--- a/index.html
+++ b/index.html
@@ -273,8 +273,8 @@
                 <h5>About Front Row.</h5>
                 <p>
                 Front Row Tutors is a group of college students and graduates looking to help lift up students to 
-                reach their goals. The group was founded by 4 students with years of experience in tutoring, and excellent personal academic
-                track records.
+                reach their goals. Four students and friends with impressive personal academic track records and extensive 
+                experience tutoring came together to form Front Row.
                 </p>
             </div>
 
