--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div id="header-hero-container">
         <header>
             <div class="flex container">
-                <a id="logo" href="#">Front Row.</a>
+                <a id="logo" href="#">Front Row Tutors</a>
                 <nav>
                     <button id="nav-toggle" class="hamburger-menu">
                         <span class="strip"></span>
