update header / greeting text

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Front Row Tutors</title>
+    <title>Front Row</title>
 
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
     <link href="css/styles.css" type="text/css" rel="Stylesheet" />
@@ -18,7 +18,7 @@
     <div id="header-hero-container">
         <header>
             <div class="flex container">
-                <a id="logo" href="#">Front Row Tutors</a>
+                <a id="logo" href="#">Front Row</a>
                 <nav>
                     <button id="nav-toggle" class="hamburger-menu">
                         <span class="strip"></span>
@@ -40,7 +40,7 @@
         <section id="hero">
             <div class="fade"></div>
             <div class="hero-text">
-                <h1>Tutoring from the Front Row.</h1>
+                <h1>Tutoring from the Front Row</h1>
                 <p>Tutors with experience, patience, and a mission.</p>
             </div>
         </section>
