--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     </section>
 
     <section id="properties">
-        <div class="flex">
+        <div class="container">
             <h2>Tutors</h2>
             <div id="properties-slider" class="slick">
                 <div class="card">
