changed ugly orange

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
     <section id="how-it-works">
         <div class="container">
-            <h2>Subjects</h2>
+            <h2>How it works</h2>
             <div class="flex">
                 <div>
                     <span class="fas fa-chalkboard-teacher"></span>
@@ -140,8 +140,6 @@
                     </div>
                 </div>
             </div>
-
-            <button class="rounded">View All Property Listings</button>
         </div>
     </section>
 
