--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
                     </button>
 
                     <ul id="nav-menu">
-                        <li><a href="#" class="active">Home</a></li>
-                        <li><a href="#">Tutors</a></li>
+                        <li><a href="#header" class="active">Home</a></li>
+                        <li><a href="#properties">Tutors</a></li>
                         <li><a href="#">Mission</a></li>
                         <li><a href="#">Schedule</a></li>
                         <li id="close-flyout"><span class="fas fa-times"></span></li>
