--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     </button>
 
                     <ul id="nav-menu">
-                        <li><a href="#head" class="active">Home</a></li>
+                        <li><a href="#hero-text" class="active">Home</a></li>
                         <li><a href="#properties">429BB8</a></li>
                         <li><a href="#">Mission</a></li>
                         <li><a href="#">Schedule</a></li>
