--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
                 <div>
                     <img src="https://user-images.githubusercontent.com/47961961/104137071-cb230300-535f-11eb-919a-82e36138984b.png" alt="Property 1" />
                     <div class="tutor-details">
+                        <p class="price">Kareem Abdo</p>
                         <address>
                             Calculus, Chemistry, Physics, Algebra, Essay Proofreading and Editing.
                         </address>
