--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                     <div class="tutor-details">
                         <p class="price">Ethan Liles</p>
                         <address>
-                            Write something ethan
+                            Algebra, Biology, Calculus, Chemistry, Computer Science Basics, Essay Writing, and Resume Editing
                         </address>
                     </div>
                 </div>
@@ -103,7 +103,7 @@
                         <span class="baths">4 baths</span>
                         <span class="sqft">4,250 sqft.</span>
                         <address>
-                            Write something ethan
+                            Accounting, Algebra, Calculus, and Standardized Test Prep
                         </address>
                     </div>
                 </div>
@@ -116,7 +116,7 @@
                         <span class="baths">4 baths</span>
                         <span class="sqft">4,250 sqft.</span>
                         <address>
-                            Write something ethan
+                            Biology, Calculus, Chemistry, and Physics
                         </address>
                     </div>
                 </div>
@@ -129,7 +129,7 @@
                         <span class="baths">4 baths</span>
                         <span class="sqft">4,250 sqft.</span>
                         <address>
-                            480 12th, Unit 14, San Francisco, CA
+                            Computer Science
                         </address>
                     </div>
                 </div>
