Ethan profile image fix attempt
attempt to fix ethan profile pic

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                 </div>
 
                 <div>
-                    <img src="https://user-images.githubusercontent.com/47961961/104137897-ceb98880-5365-11eb-987c-e661ba33d4af.png" alt="Property 1" />
+                    <img src="https://github.com/kreemo67/Front-Row-Web/blob/main/ethanfrontrowprofile.jpg?raw=true" alt="Property 1" />
                     <div class="tutor-details">
                         <p class="price">Ethan Liles</p>
                         <address>
