How it works subtext change

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                 <div>
                     <span class="fas fa-brain"></span>
                     <h4>Learn.</h4>
-                    <p>See grades improve, with a friendly, tight knit group of Tutors, and a direct approach to learning.</p>
+                    <p>Grow your understanding in a private session engineered just for you.</p>
                 </div>
             </div>
         </div>
