--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
                     <ul id="nav-menu">
                         <li><a href="#" class="active">Home</a></li>
-                        <li><a href="#tutors">Tutors</a></li>
+                        <li><a href="/Front-Row-Web/index.html#tutors">Tutors</a></li>
                         <li><a href="/Front-Row-Web/mission.html">Mission</a></li>
                         <li><a href="#">Schedule</a></li>
                         <li id="close-flyout"><span class="fas fa-times"></span></li>
