tweak mission page

--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
                     </button>
 
                     <ul id="nav-menu">
-                        <li><a href="#" class="active">Home</a></li>
-                        <li><a href="/Front-Row-Web/index.html#tutors">Tutors</a></li>
+                        <li><a href="/Front-Row-Web/" class="active">Home</a></li>
+                        <li><a href="/Front-Row-Web/#tutors">Tutors</a></li>
                         <li><a href="/Front-Row-Web/mission.html">Mission</a></li>
                         <li><a href="#">Schedule</a></li>
                         <li id="close-flyout"><span class="fas fa-times"></span></li>
