--- a/mission.html
+++ b/mission.html
@@ -27,9 +27,9 @@
                     </button>
 
                     <ul id="nav-menu">
-                        <li><a href="#" class="active">Home</a></li>
-                        <li><a href="#tutors">Tutors</a></li>
-                        <li><a href="#">Mission</a></li>
+                        <li><a href="/Front-Row-Web/" class="active">Home</a></li>
+                        <li><a href="/Front-Row-Web/#Tutors">Tutors</a></li>
+                        <li><a href="/Front-Row-Web/mission.html">Mission</a></li>
                         <li><a href="#">Schedule</a></li>
                         <li id="close-flyout"><span class="fas fa-times"></span></li>
                     </ul>
