--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
             let navToggle = $('#nav-toggle');
             let tutorsButton = $('tutors-button')
 
-           $('#tutorsButton').velocity("scroll", { duration : "1200ms"});
+           $('#tutorsButton').velocity("scroll", { duration : 1200});
 
            $('#tutors-slider').slick({
                 slidesToShow: 4,
