--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
             let navToggle = $('#nav-toggle');
             let tutorsButton = $('tutors-button')
 
-           $('#tutors-Button').velocity("scroll", { duration : 1200});
+           $('#tutors-button').velocity("scroll", { duration : 1200});
 
            $('#tutors-slider').slick({
                 slidesToShow: 4,
