--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
                 <h5>About Front Row.</h5>
                 <p>
                 Front Row Tutors is a group of college students and graduates looking to help lift up students to 
-                reach their goals. Four students and friends with impressive personal academic track records and extensive 
+                reach their goals. Four friends with impressive personal academic records and extensive 
                 experience tutoring came together to form Front Row.
                 </p>
             </div>
@@ -210,7 +210,7 @@
 
     <script>
         $('tutors-button').velocity("scroll", { duration : 1200});
-        
+
         $(function () {
             let headerElem = $('header');
             let logo = $('#logo');
