--- a/mission.html
+++ b/mission.html
@@ -11,7 +11,10 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://kit.fontawesome.com/95dc93da07.js"></script>
+    
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+    
+    <script src="//cdn.jsdelivr.net/velocity/1.1.0/velocity.min.js"></script>
 </head>
 
 <body>
@@ -37,9 +40,9 @@
             </div>
         </header>
 
-    <section id="how-it-works">
+    <section id="our-mission">
         <div class="container">
-            <h2>How it works</h2>
+            <h2>Our Mission</h2>
             <div class="flex">
                 <div>
                     <span class="fas fa-chalkboard-teacher"></span>
@@ -67,7 +70,7 @@
                 <h5>About Front Row.</h5>
                 <p>
                 Front Row Tutors is a group of college students and graduates looking to help lift up students to 
-                reach their goals. Four students and friends with impressive personal academic track records and extensive 
+                reach their goals. Four friends with impressive personal academic records and extensive 
                 experience tutoring came together to form Front Row.
                 </p>
             </div>
@@ -110,47 +113,6 @@
             let logo = $('#logo');
             let navMenu = $('#nav-menu');
             let navToggle = $('#nav-toggle');
-
-           $('#tutors-slider').slick({
-                slidesToShow: 4,
-                slidesToScroll: 1,
-                prevArrow: '<a href="#" class="slick-arrow slick-prev">previous</a>',
-                nextArrow: '<a href="#" class="slick-arrow slick-next">next</a>',
-                responsive: [
-                    {
-                        breakpoint: 1100,
-                        settings: {
-                            slidesToShow: 3,
-                            slidesToScroll: 1,
-                            infinite: true,
-                        }
-                    },
-                    {
-                        breakpoint: 767,
-                        settings: {
-                            slidesToShow: 2,
-                            slidesToScroll: 1,
-                            infinite: true,
-                        }
-                    },
-                    {
-                        breakpoint: 530,
-                        settings: {
-                            slidesToShow: 1,
-                            slidesToScroll: 1,
-                            infinite: true,
-                        }
-                    }
-                ]
-           });
-
-           $('#testimonials-slider').slick({
-                infinite: true,
-                slidesToShow: 1,
-                slidesToScroll: 1,
-                prevArrow: '<a href="#" class="slick-arrow slick-prev"><</a>',
-                nextArrow: '<a href="#" class="slick-arrow slick-next">></a>'
-           });
 
            navToggle.on('click', () => {
                navMenu.css('right', '0');
