--- a/mission.html
+++ b/mission.html
@@ -13,7 +13,7 @@
     <script src="https://kit.fontawesome.com/95dc93da07.js"></script>
     
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
-    
+
     <script src="//cdn.jsdelivr.net/velocity/1.1.0/velocity.min.js"></script>
 </head>
 
@@ -42,7 +42,7 @@
 
     <section id="our-mission">
         <div class="container">
-            <h2>Our Mission</h2>
+            <h2 class="flex">Our Mission</h2>
             <div class="flex">
                 <div>
                     <span class="fas fa-chalkboard-teacher"></span>
