--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             <h2>Tutors</h2>
             <div id="tutors-slider" class="slick">
                 <div>
-                    <img src="https://user-images.githubusercontent.com/47961961/104137889-c5302080-5365-11eb-8e1f-db7f1f24c593.jpeg" alt="Property 1" />
+                    <img src="https://user-images.githubusercontent.com/47961961/105556862-889ee600-5cd0-11eb-8e8a-b25e29228717.png" alt="Property 1" />
                     <div class="tutor-details">
                         <p class="price">Kareem Abdo</p>
                         <address>
