--- a/mission.html
+++ b/mission.html
@@ -11,15 +11,15 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://kit.fontawesome.com/95dc93da07.js"></script>
-    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/velocity/2.0.6/velocity.min.js"></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
 </head>
 
 <body>
     <div id="header-hero-container">
         <header>
             <div class="flex container">
-                <a id="logo" href="#">Front Row</a>
+                <a id="logo" href="/Front-Row-Web/">Front Row</a>
                 <nav>
                     <button id="nav-toggle" class="hamburger-menu">
                         <span class="strip"></span>
@@ -29,7 +29,7 @@
 
                     <ul id="nav-menu">
                         <li><a href="/Front-Row-Web/" class="active">Home</a></li>
-                        <li><a href="/Front-Row-Web/#Tutors">Tutors</a></li>
+                        <li id="tutors-button"><a href="/Front-Row-Web/#tutors">Tutors</a></li>
                         <li><a href="/Front-Row-Web/mission.html">Mission</a></li>
                         <li><a href="#">Schedule</a></li>
                         <li id="close-flyout"><span class="fas fa-times"></span></li>
@@ -37,38 +37,23 @@
                 </nav>
             </div>
         </header>
-
-    <section id="our-mission">
-        <div class="container">
-            <h2>Our Mission</h2>
-            <div class="flex">
-                <div>
-                    <span class="fas fa-chalkboard-teacher"></span>
-                    <h4>Select a tutor</h4>
-                    <p>Find a tutor with the right subjects from our group of hand-picked, friendly Tutors.</p>
-                </div>
-
-                <div>
-                    <span class="fas fa-calendar-plus"></span>
-                    <h4>View their schedule, and book interactively.</h4>
-                    <p>Check when our Tutors are available, and book when you want.</p>
-                </div>
-
-                <div>
-                    <span class="fas fa-brain"></span>
-                    <h4>Learn.</h4>
-                    <p>Grow your understanding in a private session engineered just for you.</p>
-                </div>
+        
+        <section id="hero">
+            <div class="fade"></div>
+            <div class="hero-text">
+                <h1>Tutoring from the Front Row</h1>
+                <p>Tutors with experience, patience, and a mission.</p>
             </div>
-        </div>
-    </section>
+        </section>
+    </div>
+
     <footer>
         <div class="flex container">
             <div class="footer-about">
                 <h5>About Front Row.</h5>
                 <p>
                 Front Row Tutors is a group of college students and graduates looking to help lift up students to 
-                reach their goals. Four friends with impressive personal academic track records and extensive 
+                reach their goals. Four friends with impressive personal academic records and extensive 
                 experience tutoring came together to form Front Row.
                 </p>
             </div>
@@ -106,6 +91,7 @@
     </footer>
 
     <script>
+        //"document ready" function 
         $(function () {
             let headerElem = $('header');
             let logo = $('#logo');
@@ -188,8 +174,20 @@
                headerElem.css(scrollTop >= 200 ? {'padding': '0.5rem', 'box-shadow': '0 -4px 10px 1px #999'} : {'padding': '1rem 0', 'box-shadow': 'none' });
            });
 
-           $(document).trigger('scroll');
+           $(document).trigger('scroll'); 
         });
+
+        var $tutors = $('tutors-button');
+        
+        $tutors.on("click", function(){
+            $("body").velocity("scroll", {
+                duration: 2000,
+                easing:"easeInBlock"
+            });
+        });
+
+
+
     </script>
 </body>
 </html>
