tweaks on wording

--- a/mission.html
+++ b/mission.html
@@ -41,8 +41,8 @@
         <section id="hero">
             <div class="fade"></div>
             <div class="hero-text">
-                <h1>Tutoring from the Front Row</h1>
-                <p>Tutors with experience, patience, and a mission.</p>
+                <h1>Our Mission</h1>
+                <p>Tutoring, and tutoring well.</p>
             </div>
         </section>
     </div>
@@ -56,16 +56,6 @@
                 reach their goals. Four friends with impressive personal academic records and extensive 
                 experience tutoring came together to form Front Row.
                 </p>
-            </div>
-
-            <div class="footer-quick-links">
-                <h5>Quick Links</h5>
-                <ul>
-                    <li><a href="#">About Us</a></li>
-                    <li><a href="#">Services</a></li>
-                    <li><a href="#">Testimonials</a></li>
-                    <li><a href="#">Contact Us</a></li>
-                </ul>
             </div>
 
             <div class="footer-subscribe">
