--- a/mission.html
+++ b/mission.html
@@ -42,7 +42,7 @@
             <div class="fade"></div>
             <div class="hero-text">
                 <h1>Our Mission</h1>
-                <p>Tutoring, and tutoring well.</p>
+                <p>Tutoring.</p>
             </div>
         </section>
     </div>
