--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
                 </p>
             </div>
 
-
+            <div class="footer-subscribe">
                 <h5 class="follow-us">Follow Us</h5>
                 <ul>
                     <li><a href="#"><span class="fab fa-facebook-f"></span></a></li>
