sizing pics to be the same

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                     <div class="tutor-details">
                         <p class="price">Mahmoud Abdo</p>
                         <address>
-                            Computer Science
+                            Data Structures and Algorithms in Python, Object Oriented Coding
                         </address>
                     </div>
                 </div>
