--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                 </div>
 
                 <div>
-                    <img src="ttps://user-images.githubusercontent.com/47961961/105561143-960d9d80-5cdb-11eb-8f48-30005bc7c7a2.jpeg" alt="Property 1" />
+                    <img src="https://user-images.githubusercontent.com/47961961/105561143-960d9d80-5cdb-11eb-8f48-30005bc7c7a2.jpeg" alt="Property 1" />
                     <div class="tutor-details">
                         <p class="price">Ethan Liles</p>
                         <address>
