--- a/index.html
+++ b/index.html
@@ -9,10 +9,6 @@
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
     <link href="css/styles.css" type="text/css" rel="Stylesheet" />
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src="https://kit.fontawesome.com/95dc93da07.js"></script>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/velocity/2.0.6/velocity.min.js"></script>
-    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
 </head>
 
 <body>
@@ -66,7 +62,7 @@
                 <div>
                     <span class="fas fa-brain"></span>
                     <h4>Learn.</h4>
-                    <p>Grow your understanding in a private session engineered just for you.</p>
+                    <p>Grow your understanding in a private session catered for you.</p>
                 </div>
             </div>
         </div>
@@ -275,6 +271,7 @@
            });
 
            $(document).trigger('scroll'); 
+           $
         });
 
         var $tutors = $('tutors-button');
@@ -286,8 +283,13 @@
             });
         });
 
-
+        $(#testimonials-slider).velocity("fadeIn", {duration:1500});
 
     </script>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://kit.fontawesome.com/95dc93da07.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/velocity/2.0.6/velocity.min.js"></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
 </body>
 </html>
