added velocity with fixed js
REALLY hoping this shit works

--- a/index.html
+++ b/index.html
@@ -273,7 +273,8 @@
 
                headerElem.css(scrollTop >= 200 ? {'padding': '0.5rem', 'box-shadow': '0 -4px 10px 1px #999'} : {'padding': '1rem 0', 'box-shadow': 'none' });
            });
-           
+
+           $("#testimonials-slider").velocity("fadeIn",{duration:1500});
        });
 
     </script>
