updates to jquery AGAIN

--- a/index.html
+++ b/index.html
@@ -9,10 +9,9 @@
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
     <link href="css/styles.css" type="text/css" rel="Stylesheet" />
 
-    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script type="text/javascript" src="https://kit.fontawesome.com/95dc93da07.js"></script>
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/velocity/2.0.6/velocity.min.js"></script>
-    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/velocity-animate@1.5.2/velocity.ui.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/velocity/2.0.6/velocity.min.js"></script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
 </head>
 
@@ -32,7 +31,7 @@
                         <li><a href="/Front-Row-Web/" class="active">Home</a></li>
                         <li id="tutors-button"><a href="/Front-Row-Web/#tutors">Tutors</a></li>
                         <li><a href="/Front-Row-Web/mission.html">Mission</a></li>
-                        <li><a href="/Front-Row-Web/#tutors">Schedule</a></li>
+                        <li><a href="/Front-Row-Web/test.html">Schedule</a></li>
                         <li id="close-flyout"><span class="fas fa-times"></span></li>
                     </ul>
                 </nav>
