adding fadeIn to test.html

--- a/test.html
+++ b/test.html
@@ -76,8 +76,7 @@
     </footer>
 
     <script>
-      $("#testimonials-slider").velocity("fadeIn",{duration:1500});
-
+      $("#hero-text").velocity("fadeIn",{duration:1500});
     </script>
 </body>
 </html>
