--- a/test.html
+++ b/test.html
@@ -78,7 +78,7 @@
     <script>
       //velocity function test
         function withVelocity(){
-            $("#hero-text").velocity({
+            $("#play-velocity").velocity({
             left: "500px",
         }, {
             duration: 3000, 
