added links to simplybook.me
simplybook.me functionality. gotta edit the tool itself still to make it work

--- a/mission.html
+++ b/mission.html
@@ -31,7 +31,7 @@
                         <li><a href="/Front-Row-Web/" class="active">Home</a></li>
                         <li id="tutors-button"><a href="/Front-Row-Web/#tutors">Tutors</a></li>
                         <li><a href="/Front-Row-Web/mission.html">Mission</a></li>
-                        <li><a href="/Front-Row-Web/#tutors">Schedule</a></li>
+                        <li><a href="https://frontrowtutors.simplybook.me/v2/#book">Schedule</a></li>
                         <li id="close-flyout"><span class="fas fa-times"></span></li>
                     </ul>
                 </nav>
