--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
                     </button>
 
                     <ul id="nav-menu">
-                        <li><a href="/Front-Row-Web/" class="active">Home</a></li>
-                        <li id="tutors-button"><a href="/Front-Row-Web/#tutors">Tutors</a></li>
-                        <li><a href="/Front-Row-Web/mission.html">Mission</a></li>
+                        <li><a href="https://bookfrontrow.com" class="active">Home</a></li>
+                        <li id="tutors-button"><a href="https://bookfrontrow.com/#tutors">Tutors</a></li>
+                        <li><a href="https://bookfrontrow.com/mission.html">Mission</a></li>
                         <li><a href="https://frontrowtutors.simplybook.me/v2/#book">Schedule</a></li>
                         <li id="close-flyout"><span class="fas fa-times"></span></li>
                     </ul>
