--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div id="header-hero-container">
         <header>
             <div class="flex container">
-                <a id="logo" href="/Front-Row-Web/">Front Row</a>
+                <a id="logo" href="https://bookfrontrow.com/">Front Row</a>
                 <nav>
                     <button id="nav-toggle" class="hamburger-menu">
                         <span class="strip"></span>
