--- a/mission.html
+++ b/mission.html
@@ -42,7 +42,8 @@
             <div class="fade"></div>
             <div class="hero-text">
                 <h1>Our Mission</h1>
-                <p><--! Our mission here! Involves our donations.--></p>
+                <p>Our mission is to provide each student with the necessary tools and methods to succeed in college courses. We strive to have a positive impact not only inside the classroom but also outside, in our community. We do this by donating 5% of all profits made through Front Row Tutors to local charities.
+</p>
             </div>
         </section>
     </div>
