--- a/mission.html
+++ b/mission.html
@@ -29,7 +29,7 @@
 
                     <ul id="nav-menu">
                         <li><a href="www.bookfrontrow.com" class="active">Home</a></li>
-                        <li id="tutors-button"><a href="/Front-Row-Web/#tutors">Tutors</a></li>
+                        <li id="tutors-button"><a href="www.bookfrontrow.com/#tutors">Tutors</a></li>
                         <li><a href="www.bookfrontrow.com/mission.html">Mission</a></li>
                         <li><a href="https://frontrowtutors.simplybook.me/v2/#book">Schedule</a></li>
                         <li id="close-flyout"><span class="fas fa-times"></span></li>
