--- a/mission.html
+++ b/mission.html
@@ -19,7 +19,7 @@
     <div id="header-hero-container">
         <header>
             <div class="flex container">
-                <a id="logo" href="/Front-Row-Web/">Front Row</a>
+                <a id="logo" href="">Front Row</a>
                 <nav>
                     <button id="nav-toggle" class="hamburger-menu">
                         <span class="strip"></span>
@@ -29,8 +29,8 @@
 
                     <ul id="nav-menu">
                         <li><a href="www.bookfrontrow.com" class="active">Home</a></li>
-                        <li id="tutors-button"><a href="www.bookfrontrow.com/#tutors">Tutors</a></li>
-                        <li><a href="www.bookfrontrow.com/mission.html">Mission</a></li>
+                        <li id="tutors-button"><a href="/#tutors">Tutors</a></li>
+                        <li><a href="/mission.html">Mission</a></li>
                         <li><a href="https://frontrowtutors.simplybook.me/v2/#book">Schedule</a></li>
                         <li id="close-flyout"><span class="fas fa-times"></span></li>
                     </ul>
