--- a/mission.html
+++ b/mission.html
@@ -28,7 +28,7 @@
                     </button>
 
                     <ul id="nav-menu">
-                        <li><a href="" class="active">Home</a></li>
+                        <li><a href="/" class="active">Home</a></li>
                         <li id="tutors-button"><a href="/#tutors">Tutors</a></li>
                         <li><a href="/mission.html">Mission</a></li>
                         <li><a href="https://frontrowtutors.simplybook.me/v2/#book">Schedule</a></li>
